# agent-delegate

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/agent_delegate/: __init__.py  cli.py  detect.py  install.py  ledger.py  output.py  profiles.py  usage_log.py
src/agent_delegate/backends/: __init__.py  anthropic.py  base.py  openai_compat.py
src/agent_delegate/commands/: _corpus.py  _prompts.py  ask.py  summarize.py  write.py
src/agent_delegate/rules/: README.md  claude_code.md  claude_desktop.md  codex_app.md  codex_cli.md
tests/: test_basic.py  test_corpus.py
