[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-delegate"
version = "0.2.0"
description = "Universal cheap-subagent CLI — route low-reasoning tasks from Claude Code / Codex to Ollama, LM Studio, OpenRouter, Anthropic Haiku, and other backends."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "AliReza Erfan"}]
keywords = ["ai", "llm", "ollama", "claude", "codex", "delegate", "subagent", "openrouter", "lmstudio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/aliaihub/agent-delegate"
Issues = "https://github.com/aliaihub/agent-delegate/issues"

[project.scripts]
agent-delegate = "agent_delegate.cli:main"
ad = "agent_delegate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_delegate"]

[tool.hatch.build]
include = [
  "src/agent_delegate/**/*.py",
  "src/agent_delegate/rules/*.md",
]
